--- a/src/main/resources/com/imageprocessingjx/imageprocessingjx/hello-view.fxml
+++ b/src/main/resources/com/imageprocessingjx/imageprocessingjx/hello-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
@@ -11,14 +12,21 @@
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
-   <AnchorPane prefHeight="659.0" prefWidth="1240.0">
+   <ToolBar prefHeight="40.0" prefWidth="200.0">
+     <items>
+         <ComboBox fx:id="NoisesComboBox" onAction="#createNoisesComboBoxOptions" prefHeight="24.0" prefWidth="186.0" promptText="Опции и Действия" />
+     </items>
+   </ToolBar>
+   <AnchorPane prefHeight="587.0" prefWidth="1226.0">
       <children>
          <Button layoutX="1137.0" layoutY="600.0" onAction="#onExitButtonClick" prefHeight="43.0" prefWidth="89.0" text="Exit" />
          <ImageView fx:id="ImageView1" fitHeight="400.0" fitWidth="580.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" />
          <ImageView fx:id="ImageView2" fitHeight="400.0" fitWidth="580.0" layoutX="632.0" layoutY="14.0" pickOnBounds="true" />
-         <Button layoutX="14.0" layoutY="621.0" mnemonicParsing="false" onAction="#onImgBtn1Click" text="Изобр.1" />
-         <Button layoutX="92.0" layoutY="621.0" mnemonicParsing="false" onAction="#onImgBtn2Click" text="Изобр.2" />
+         <Button layoutX="14.0" layoutY="576.0" mnemonicParsing="false" onAction="#onImgBtn1Click" text="Изобр.1" />
+         <Button layoutX="92.0" layoutY="576.0" mnemonicParsing="false" onAction="#onImgBtn2Click" text="Изобр.2" />
          <ComboBox fx:id="comboBox" layoutX="173.0" layoutY="621.0" onAction="#createImageChoices" prefWidth="150.0" />
+       <Button layoutX="339.0" layoutY="621.0" mnemonicParsing="false" onAction="#onNoiseBtnClick" text="Применить Опции" />
+         <Button layoutX="45.0" layoutY="610.0" mnemonicParsing="false" onAction="#onImgBtn3Click" text="Оба Изобр." />
       </children>
    </AnchorPane>
 </VBox>
