--- a/src/main/resources/com/imageprocessingjx/imageprocessingjx/UIview.fxml
+++ b/src/main/resources/com/imageprocessingjx/imageprocessingjx/UIview.fxml
@@ -8,13 +8,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1024.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.imageprocessingjx.imageprocessingjx.UIController">
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="1024.0" spacing="20.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.imageprocessingjx.imageprocessingjx.UIController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
   </padding>
@@ -40,7 +41,7 @@
          <Button layoutX="14.0" layoutY="541.0" mnemonicParsing="false" onAction="#onImgBtn1Click" text="Изобр.1" />
          <Button layoutX="92.0" layoutY="541.0" mnemonicParsing="false" onAction="#onImgBtn2Click" text="Изобр.2" />
          <Button layoutX="45.0" layoutY="575.0" mnemonicParsing="false" onAction="#onImgBtn3Click" text="Оба Изобр." />
-         <Button layoutX="333.0" layoutY="568.0" mnemonicParsing="false" onAction="#onHistogramBtnClick" text="Гистограмма изображения" />
+         <Button layoutX="330.0" layoutY="576.0" mnemonicParsing="false" onAction="#onHistogramBtnClick" text="Гистограмма изображения" />
          <ComboBox fx:id="comboBox" layoutX="173.0" layoutY="568.0" onAction="#createImageChoices" prefWidth="150.0" />
          <LineChart fx:id="histogramChart" layoutX="510.0" layoutY="370.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#refreshHistogram" prefHeight="241.0" prefWidth="345.0" visible="false">
            <xAxis>
@@ -50,7 +51,9 @@
              <NumberAxis side="LEFT" />
            </yAxis>
          </LineChart>
-         <Button layoutX="333.0" layoutY="541.0" mnemonicParsing="false" onAction="#onHideHistogramClick" text="Убрать Гистограмму" />
+         <Button layoutX="330.0" layoutY="530.0" mnemonicParsing="false" onAction="#onHideHistogramClick" text="Убрать Гистограмму" />
+         <Button layoutX="330.0" layoutY="554.0" mnemonicParsing="false" onAction="#removeMoments" text="Убрать Поле Моменты" />
+         <TextArea fx:id="textField" layoutX="534.0" layoutY="370.0" prefHeight="230.0" prefWidth="332.0" />
       </children>
    </AnchorPane>
 </VBox>
